--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="google_maps_key">AIzaSyBq-zZMaM9iY4POpPUc2SnrvrV5cYYCOOg</string>
     <string name="app_name">Location Reminders</string>
     <string name="error_happened">Error happened</string>
     <string name="retry">Retry</string>
@@ -40,4 +41,6 @@
     <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
     <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
     <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
+    <string name="unknown_geofence_error">Unknown Geofence Error</string>
+    <string name="mylocation">"My location is "</string>
 </resources>
